# project4

./: CMakeLists.txt  main.c
create_window/: init_instance.c  init_instance.h  make_window.c  make_window.h  register_class.c  register_class.h  window_def.h
create_window/window_procedure/: alarm_procedure.c  eng_1item_procedure.c  eng_3item_procedure.c  learning_procedure.c  menu_procedure.c  question_procedure.c  timer_procedure.c  window_procedure.h
mode_function/: csv_file.h  make_question.c  make_question.h  qa_def.h  set_file.c  set_file.h  sound.h
question/english/part1/: english_part1.csv
question/english/part2/: english_part2.csv
question/english/part3/: english_part3.csv
question/english/part4/: english_part4.csv
question/english/part5/: english_part5.csv
question/english/word/: english_word.csv
question/math/basic/: math_basic.csv
question/math/factorize/: math_factorize.csv
resource/: english.rc  icon.rc  math.rc  other.rc
